2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Naming convention): Use GRUB 2 syntax.
	(File name syntax): Likewise.
	(help): --all is no longer supported in GRUB 2.  Be more precise
	about pattern matching.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* normal/completion.c (grub_normal_do_completion): When completing
	arguments to "set" and the current word contains an equals sign,
	skip to after the equals sign before starting completion.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* fs/i386/pc/pxe.c (grub_pxe_open): Fix parsing of gateway_ip.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Network): New section.
	(Device syntax): The network device is called `(pxe)' in GRUB 2, not
	`(nd)' as in GRUB Legacy.
	(pxe_unload): New section.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Troubleshooting): `echo' is not usually available
	in the rescue shell, so recommend using `set' instead.  Thanks,
	Jordan Uggla.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Filesystem): Refer to `search' instead of `find'.
	(password): New section.
	(password_pbkdf2): New section.
	(search): New section.
	(Security): New section.
	(Troubleshooting): New section, currently very incomplete.
	(Invoking grub-mkpasswd-pbkdf2): New section.
	(Internals): New section, currently very incomplete.

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Add some more quoting (of
	"${prev_saved_entry}" and "${boot_once}") needed to make savedefault
	work again.
	Reported by: Mario 'BitKoenig' Holbe (Debian bug #584812).

2010-06-07  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkpasswd-pbkdf2.c (main): Rename top-level `c' variable
	to `count', fixing variable shadowing that broke the -c option.

2010-06-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/00_header.in: Quote values assigned to `saved_entry',
	in case they contain spaces.
